# miniclaw

./: .gitignore  CLAUDE.md  README.md  config.example.toml  docker-compose.rocketchat.yml  pyproject.toml  test_endurance.py  test_live.py
docs/: ARCHITECTURE_GUIDE.md
eval/: eval_intelligence.py
openclaw/: __init__.py  config.py  main.py  repl.py  rocketchat.py  server.py  tokenizer.py
openclaw/agent/: __init__.py  api.py  loop.py  types.py
openclaw/browser/: __init__.py
openclaw/context/: diagnosis.py  guard.py
openclaw/cron/: __init__.py  persistence.py
openclaw/hooks/: __init__.py
openclaw/memory/: curation.py  embeddings.py  query.py  ranking.py  search.py  store.py  watchers.py
openclaw/model/: cooldown.py  error_classify.py  failover.py  provider.py  thinking.py
openclaw/prompt/: bootstrap.py  builder.py  sanitize.py
openclaw/session/: compaction.py  identifiers.py  lanes.py  manager.py  memory_flush.py  pruning.py  safeguard.py
openclaw/skills/: loader.py
openclaw/skills/bundled/himalaya/: SKILL.md
openclaw/skills/bundled/nano-pdf/: SKILL.md
openclaw/static/: index.html
openclaw/subagent/: spawn.py
openclaw/tools/: loop_detector.py  registry.py  truncation.py
openclaw/tools/builtins/: apply_patch.py  bash.py  browser_tool.py  cron_tool.py  edit.py  hancom_tool.py  image_tool.py  memory_tool.py  pdf_tool.py  process_tool.py  read.py  session_status_tool.py  web_fetch.py  write.py
tests/: test_live.py
tests/eval/: eval_intelligence.py  eval_parity.py
